--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240301063605">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240301172910">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -86,7 +86,251 @@
 					</div>
 				</div>
 			</section>
-
+			<section class="page__tools tools">
+				<div class="tools__container">
+					<h2 class="tools__title title">
+						We design tools to unveil <br> your superpowers
+					</h2>
+					<div class="tools__items">
+						<article class="tools__item item-tools">
+							<div class="item-tools__icon _icon-cursor" style="--bg-color:#7752BE;">
+							</div>
+							<div class="item-tools__body">
+								<h3 class="item-tools__title title title--size-22">
+									First click tests
+								</h3>
+								<div class="item-tools__text">
+									<p>
+										While most people enjoy casino gambling,
+									</p>
+								</div>
+							</div>
+						</article>
+						<article class="tools__item item-tools">
+							<div class="item-tools__icon _icon-design" style="--bg-color:#FAB005;">
+							</div>
+							<div class="item-tools__body">
+								<h3 class="item-tools__title title title--size-22">
+									Design surveys
+								</h3>
+								<div class="item-tools__text">
+									<p>
+										Sports betting, lottery and bingo playing for the fun
+									</p>
+								</div>
+							</div>
+						</article>
+						<article class="tools__item item-tools">
+							<div class="item-tools__icon _icon-favorite" style="--bg-color:#F03E3D;">
+							</div>
+							<div class="item-tools__body">
+								<h3 class="item-tools__title title title--size-22">
+									Preference tests
+								</h3>
+								<div class="item-tools__text">
+									<p>
+										The Myspace page defines the individual.
+									</p>
+								</div>
+							</div>
+						</article>
+						<article class="tools__item item-tools">
+							<div class="item-tools__icon _icon-time" style="--bg-color:#4DADF7;">
+							</div>
+							<div class="item-tools__body">
+								<h3 class="item-tools__title title title--size-22">
+									Five second tests
+								</h3>
+								<div class="item-tools__text">
+									<p>
+										Personal choices and the overall personality of the person.
+									</p>
+								</div>
+							</div>
+						</article>
+					</div>
+					<button type="button" class="item-tools__button button button--w-175">
+						SIGN UP NOW
+					</button>
+				</div>
+			</section>
+			<section class="page__profession profession">
+				<div class="profession__container">
+					<div class="profession__items">
+						<div class="head-content head-content--margin">
+							<h4 class="label">
+								Effortless Validation for
+							</h4>
+							<h2 class="title title--margin">
+								Design Professionals
+							</h2>
+							<div class="text">
+								<p>
+									The Myspace page defines the individual, his or her characteristics, traits,
+									personal
+									choices and the
+									overall
+									personality of the person.
+								</p>
+							</div>
+						</div>
+						<div class="body-content">
+							<h3>
+								Accessory makers
+							</h3>
+							<p>
+								While most people enjoy casino gambling, sports betting, lottery and bingo playing for
+								the fun
+							</p>
+							<h3>
+								Alterationists
+							</h3>
+							<p>
+								If you are looking for a new way to promote your business that won’t cost you more
+								money,
+							</p>
+							<h3>
+								Custom Design designers
+							</h3>
+							<p>
+								If you are looking for a new way to promote your business that won’t cost you more
+								money,
+							</p>
+						</div>
+					</div>
+					<img src="img/section_images/image_2.svg" alt="image_2" class="profession__image">
+				</div>
+			</section>
+			<section class="page__profession profession profession--revers">
+				<div class="profession__container">
+					<img src="img/section_images/image_3.svg" alt="image_2" class="profession__image">
+					<div class="profession__items">
+						<div class="head-content head-content--margin">
+							<h4 class="label">
+								Easier decision making for
+							</h4>
+							<h2 class="title title--margin">
+								Product Managers
+							</h2>
+							<div class="text">
+								<p>
+									The Myspace page defines the individual, his or her characteristics, traits,
+									personal choices and the overall
+									personality of the person.
+								</p>
+							</div>
+						</div>
+						<ul class="list-body">
+							<li class="list-body__item _icon-done">
+								Never worry about overpaying for your energy again.
+							</li>
+							<li class="list-body__item _icon-done">
+								We will only switch you to energy companies that we trust and will treat you right
+							</li>
+							<li class="list-body__item _icon-done">
+								We track the markets daily and know where the savings are.
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<section class="page__profession profession">
+				<div class="profession__container">
+					<div class="profession__items">
+						<div class="head-content head-content--margin">
+							<h4 class="label">
+								Optimisation for
+							</h4>
+							<h2 class="title title--margin">
+								Marketers
+							</h2>
+							<div class="text">
+								<p>
+									Few would argue that, despite the advancements of feminism over the past three
+									decades, women still face a double
+									standard when it comes to their behavior.
+								</p>
+							</div>
+						</div>
+						<div class="body-content">
+							<h3>
+								Accessory makers
+							</h3>
+							<p>
+								While most people enjoy casino gambling, sports betting, lottery and bingo playing for
+								the fun
+							</p>
+							<h3>
+								Alterationists
+							</h3>
+							<p>
+								If you are looking for a new way to promote your business that won’t cost you more
+								money,
+							</p>
+							<h3>
+								Custom Design designers
+							</h3>
+							<p>
+								If you are looking for a new way to promote your business that won’t cost you more
+								money,
+							</p>
+						</div>
+					</div>
+					<img src="img/section_images/image_4.svg" alt="image_4" class="profession__image">
+				</div>
+			</section>
+			<!-- <section class="page__need-help need-help">
+				<div class="need-help__container">
+					<div class="head-content head-content--margin">
+						<h2 class="title title--margin">
+							Need a super hero?
+						</h2>
+						<div class="text">
+							<p>
+								Do you require some help for your project: Conception workshop, <br>
+								prototyping, marketing strategy, landing page, Ux/UI?
+							</p>
+						</div>
+						<button type="button" class="button button--w-216">
+							Contact our expert
+						</button>
+					</div>
+					<div class="need-help__avatars avatars">
+						<div class="avatars__item">
+							<div class="avatars__img avatars__img--left">
+								<picture><source srcset="img/avatar/avatar_1.webp" type="image/webp"><img src="img/avatar/avatar_1.png" alt="avatar_1"></picture>
+								<div class="avatars__comment">I can take care of your pitch</div>
+								<div class="avatars__circle"></div>
+								<div class="avatars__circle avatars__circle--small"></div>
+							</div>
+							<div class="avatars__img">
+								<picture><source srcset="img/avatar/avatar_2.webp" type="image/webp"><img src="img/avatar/avatar_2.png" alt="avatar_2"></picture>
+								<div class="avatars__comment">I can help marketing strategy</div>
+								<div class="avatars__circle"></div>
+								<div class="avatars__circle avatars__circle--small"></div>
+							</div>
+							<div class="avatars__img">
+								<picture><source srcset="img/avatar/avatar_3.webp" type="image/webp"><img src="img/avatar/avatar_3.png" alt="avatar_3"></picture>
+								<div class="avatars__comment">I can prototype your app</div>
+								<div class="avatars__circle"></div>
+								<div class="avatars__circle avatars__circle--small"></div>
+							</div>
+							<div class="avatars__img">
+								<picture><source srcset="img/avatar/avatar_4.webp" type="image/webp"><img src="img/avatar/avatar_4.png" alt="avatar_4"></picture>
+								<div class="avatars__comment">I will define the profile of your users</div>
+								<div class="avatars__circle"></div>
+								<div class="avatars__circle avatars__circle--small"></div>
+							</div>
+							<div class="avatars__img">
+								<picture><source srcset="img/avatar/avatar_5.webp" type="image/webp"><img src="img/avatar/avatar_5.png" alt="avatar_5"></picture>
+								<div class="avatars__comment">I can design you website</div>
+								<div class="avatars__circle"></div>
+								<div class="avatars__circle avatars__circle--small"></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section> -->
 			<!-- <h2 class="title title--margin">
     We design tools to unveil your superpowers
 </h2>
@@ -131,17 +375,17 @@
         If you are looking for a new way to promote your business that won’t cost you more money,
     </p>
 </div>
-<button class="button ">
+<button type="button" class="button ">
     Sign Up
 </button>
-<button class="button  button--w-175">
+<button type="button" class="button  button--w-175">
     Get started
 </button>
-<button class="button  button--w-130">
+<button type="button" class="button  button--w-130">
     Sign up Now
 </button>
 
-<button class="button button--border">
+<button type="button" class="button button--border">
     Sign In
 </button>
 <a href="#!" class="button button--w-216">
@@ -219,7 +463,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240301063605"></script>
+	<script src="js/app.min.js?_v=20240301172910"></script>
 </body>
 
 </html>
