--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240301195108">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240302082848">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -331,10 +331,116 @@
 					</div>
 				</div>
 			</section> -->
+			<section class="page__marketing marketing">
+				<div class="marketing__container">
+					<div class="head-content head-content--margin">
+						<h2 class="title ttitle--size-34" style="margin-bottom: 9px;">
+							Marketing Strategies
+						</h2>
+						<div class="text">
+							<p>
+								Join 40,000+ other marketers and get proven strategies on email marketing
+							</p>
+						</div>
+					</div>
+					<!-- Оболонка слайдера -->
+					<div class="marketing__slider swiper">
+						<!-- Частина слайдера, що рухається -->
+						<div class="marketing__wrapper swiper-wrapper">
+							<!-- Слайд -->
+							<div class="marketing__slide swiper-slide">
+								<article class="marketing__item item-marketting">
+									<a href="#!" class="item-marketting__image">
+										<picture><source srcset="img/marketing/bitmap_1.webp" type="image/webp"><img src="img/marketing/bitmap_1.jpg" alt="bitmap_1"></picture>
+									</a>
+									<div class="item-marketting__avtor">
+										By <strong>Abdullah</strong> | 03 March 2019
+									</div>
+									<h5 class="item-marketting__title title title--size-24">
+										<a href="#!" class="item-marketting__link-title">
+											Increasing Prosperity With Positive Thinking
+										</a>
+
+									</h5>
+								</article>
+							</div>
+							<div class="marketing__slide swiper-slide">
+								<article class="marketing__item item-marketting">
+									<a href="#!" class="item-marketting__image">
+										<picture><source srcset="img/marketing/bitmap_2.webp" type="image/webp"><img src="img/marketing/bitmap_2.jpg" alt="bitmap_2"></picture>
+									</a>
+									<div class="item-marketting__avtor">
+										By <strong>Abdullah</strong> | 03 March 2019
+									</div>
+									<h5 class="item-marketting__title title title--size-24">
+
+										<a href="#!" class="item-marketting__link-title">
+											Motivation Is The First Step To Success
+										</a>
+									</h5>
+								</article>
+							</div>
+							<div class="marketing__slide swiper-slide">
+								<article class="marketing__item item-marketting">
+									<a href="#!" class="item-marketting__image">
+										<picture><source srcset="img/marketing/bitmap_3.webp" type="image/webp"><img src="img/marketing/bitmap_3.jpg" alt="bitmap_3"></picture>
+									</a>
+									<div class="item-marketting__avtor">
+										By <strong>Abdullah</strong> | 03 March 2019
+									</div>
+									<h5 class="item-marketting__title title title--size-24">
+										<a href="#!" class="item-marketting__link-title">
+											Success Steps For Your Personal Or Business Life
+										</a>
+
+									</h5>
+								</article>
+							</div>
+							<div class="marketing__slide swiper-slide">
+								<article class="marketing__item item-marketting">
+									<a href="#!" class="item-marketting__image">
+										<picture><source srcset="img/marketing/bitmap_1.webp" type="image/webp"><img src="img/marketing/bitmap_1.jpg" alt="bitmap_1"></picture>
+									</a>
+									<div class="item-marketting__avtor">
+										By <strong>Abdullah</strong> | 03 March 2019
+									</div>
+									<h5 class="item-marketting__title title title--size-24">
+										<a href="#!" class="item-marketting__link-title">
+											Increasing Prosperity With Positive Thinking
+										</a>
+
+									</h5>
+								</article>
+							</div>
+							<div class="marketing__slide swiper-slide">
+								<article class="marketing__item item-marketting">
+									<a href="#!" class="item-marketting__image">
+										<picture><source srcset="img/marketing/bitmap_2.webp" type="image/webp"><img src="img/marketing/bitmap_2.jpg" alt="bitmap_2"></picture>
+									</a>
+									<div class="item-marketting__avtor">
+										By <strong>Abdullah</strong> | 03 March 2019
+									</div>
+									<h5 class="item-marketting__title title title--size-24">
+										<a href="#!" class="item-marketting__link-title">
+											Motivation Is The First Step To Success
+										</a>
+
+									</h5>
+								</article>
+							</div>
+						</div>
+						<!-- Якщо потрібна пагінація -->
+						<div class="swiper-pagination"></div>
+					</div>
+				</div>
+			</section>
 			<!-- <h2 class="title title--margin">
     We design tools to unveil your superpowers
 </h2>
 <h2 class="title title--margin title--size-22">
+    We design tools to unveil your superpowers
+</h2>
+<h2 class="title title--margin-9 title--size-34">
     We design tools to unveil your superpowers
 </h2>
 <h2 class="title title--margin title--size-24">
@@ -463,7 +569,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240301195108"></script>
+	<script src="js/app.min.js?_v=20240302082848"></script>
 </body>
 
 </html>
