--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<h2>Готові сторінки:</h2>
 		<ol class="rootpage__list">
 			<li><a target="_blank" href="home.html">Головна</a></li>
+			<li><a target="_blank" href="common.html">Компоненти</li>
 		</ol>
 		<h2>Попапи:</h2>
 		<ol class="rootpage__list">
