--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240302084931">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240303165140">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -279,13 +279,13 @@
 					<img src="img/section_images/image_4.svg" alt="image_4" class="profession__image">
 				</div>
 			</section>
-			<!-- <section class="page__need-help need-help">
+			<section class="page__need-help need-help">
 				<div class="need-help__container">
 					<div class="head-content head-content--margin">
 						<h2 class="title title--margin">
 							Need a super hero?
 						</h2>
-						<div class="text">
+						<div class="text text--margin">
 							<p>
 								Do you require some help for your project: Conception workshop, <br>
 								prototyping, marketing strategy, landing page, Ux/UI?
@@ -295,42 +295,50 @@
 							Contact our expert
 						</button>
 					</div>
-					<div class="need-help__avatars avatars">
-						<div class="avatars__item">
-							<div class="avatars__img avatars__img--left">
-								<picture><source srcset="img/avatar/avatar_1.webp" type="image/webp"><img src="img/avatar/avatar_1.png" alt="avatar_1"></picture>
-								<div class="avatars__comment">I can take care of your pitch</div>
-								<div class="avatars__circle"></div>
-								<div class="avatars__circle avatars__circle--small"></div>
+					<div class="avatar">
+						<div class="avatar__item avatar__item--2">
+							<picture><source srcset="img/avatar/avatar_2.webp" type="image/webp"><img src="img/avatar/avatar_2.png" alt="avatar_2"></picture>
+							<div>
+								<span>
+									I can help marketing strategy
+								</span>
 							</div>
-							<div class="avatars__img">
-								<picture><source srcset="img/avatar/avatar_2.webp" type="image/webp"><img src="img/avatar/avatar_2.png" alt="avatar_2"></picture>
-								<div class="avatars__comment">I can help marketing strategy</div>
-								<div class="avatars__circle"></div>
-								<div class="avatars__circle avatars__circle--small"></div>
+						</div>
+						<div class="avatar__item avatar__item--right">
+							<picture><source srcset="img/avatar/avatar_1.webp" type="image/webp"><img src="img/avatar/avatar_1.png" alt="avatar_1"></picture>
+							<div>
+								<span>
+									I can take care of your pitch
+								</span>
 							</div>
-							<div class="avatars__img">
-								<picture><source srcset="img/avatar/avatar_3.webp" type="image/webp"><img src="img/avatar/avatar_3.png" alt="avatar_3"></picture>
-								<div class="avatars__comment">I can prototype your app</div>
-								<div class="avatars__circle"></div>
-								<div class="avatars__circle avatars__circle--small"></div>
+						</div>
+						<div class="avatar__item avatar__item--3">
+							<picture><source srcset="img/avatar/avatar_3.webp" type="image/webp"><img src="img/avatar/avatar_3.png" alt="avatar_3"></picture>
+							<div>
+								<span>
+									I can prototype your app
+								</span>
 							</div>
-							<div class="avatars__img">
-								<picture><source srcset="img/avatar/avatar_4.webp" type="image/webp"><img src="img/avatar/avatar_4.png" alt="avatar_4"></picture>
-								<div class="avatars__comment">I will define the profile of your users</div>
-								<div class="avatars__circle"></div>
-								<div class="avatars__circle avatars__circle--small"></div>
+						</div>
+						<div class="avatar__item avatar__item--4">
+							<picture><source srcset="img/avatar/avatar_5.webp" type="image/webp"><img src="img/avatar/avatar_5.png" alt="avatar_5"></picture>
+							<div>
+								<span>
+									I can design you website
+								</span>
 							</div>
-							<div class="avatars__img">
-								<picture><source srcset="img/avatar/avatar_5.webp" type="image/webp"><img src="img/avatar/avatar_5.png" alt="avatar_5"></picture>
-								<div class="avatars__comment">I can design you website</div>
-								<div class="avatars__circle"></div>
-								<div class="avatars__circle avatars__circle--small"></div>
+						</div>
+						<div class="avatar__item avatar__item--5">
+							<picture><source srcset="img/avatar/avatar_4.webp" type="image/webp"><img src="img/avatar/avatar_4.png" alt="avatar_4"></picture>
+							<div>
+								<span>
+									I will define the profile of your users
+								</span>
 							</div>
 						</div>
 					</div>
 				</div>
-			</section> -->
+			</section>
 			<section class="page__marketing marketing">
 				<div class="marketing__container">
 					<div class="head-content head-content--margin">
@@ -453,7 +461,7 @@
     <h2 class="title title--margin">
         We design tools to unveil your superpowers
     </h2>
-    <div class="text">
+    <div class="text text--margin">
         <p>
             The Myspace page defines the individual, his or her characteristics, traits, personal choices and the
             overall
@@ -569,7 +577,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240302084931"></script>
+	<script src="js/app.min.js?_v=20240303165140"></script>
 </body>
 
 </html>
